--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "author": "Brendo Gomes Santana",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev src/index.ts"
+  },
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "bcryptjs": "^2.4.3",
